--- a/python/flask/playground/templates/index.html
+++ b/python/flask/playground/templates/index.html
@@ -5,36 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="css/style.css" rel="stylesheet">
-        <!-- Inline CSS -->
-        <style>
-            *{
-                padding: 0;
-                margin: 0;
-            }
-            .body{
-                background-color: linen;
-            }
-            .box {
-                height: 300px;
-                width: 300px;
-                border-radius: 2px;
-                border-color: black;
-                background-color: aqua;
-                margin: 24px;
-            }
-        </style>
-        <!-- CSS end -->
     </head>
     <body>
-        <h3>My Flask Template</h3>
-<!-- <p>Phrase: {{ phrase }}</p> -->
-<p>Times: {{ times }}</p>
-    
-{% for x in range(0,times): %}
-    <p>hello</p>
-{% endfor %}
-    
-
-
+        <h1>hello world</h1>
     </body>
 </html>
