--- a/python/flask/playground/templates/home.html
+++ b/python/flask/playground/templates/home.html
@@ -4,39 +4,37 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
-        <!-- Inline CSS -->
+
         <style>
-            *{
-                padding: 0;
-                margin: 0;
-            }
-            .body{
-                background-color: linen;
-            }
             .box {
-                
-                height: 300px;
-                width: 300px;
-                border-radius: 2px;
-                border-color: black;
-                background-color: aqua;
-                margin: 24px;
+                width: 100px;
+                height: 100px;
+                /*background-color: var(--color); */
+                border-radius: 5px;
+                border: 1px solid black;
+                margin: 20px;
+                display: inline-block
             }
         </style>
-        <!-- CSS end -->
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     </head>
 
     <body>
-        <h3>My Flask Template</h3>
-<!-- <p>Phrase: {{ phrase }}</p> -->
-<p>Times: {{ times }}</p>
-    
-{% for x in range(0,times): %}
-    <p class=".box">hello</p>
-{% endfor %}
-    
+        <div class="container">
+            <h3>My python project</h3>
+            {% for i in range(0,new_times): %}
+            <p class="box" bgcolor="{{color}}"></p>
+            {% endfor %}
 
 
+        </div>
+
+        <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     </body>
 </html>
