--- a/python/flask/counter/templates/home.html
+++ b/python/flask/counter/templates/home.html
@@ -5,16 +5,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- linking a css style sheet -->
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/my_style.css') }}">
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Counter App</title>
   </head>
   <body>
-    <div class="containter">
+    <div class="content">
+      <form action="/">
         <h1>Counter</h1>
-        <button>Add two visits</button>
-        <button>Reset</button>
+          <p> {{session['visits']}} time</p>
+        <a href="/">
+          <button type="submit" >Add two visits</button>
+        </a>
+        <a href="/destroy_session">
+          <button type="reset">Reset</button>
+        </a> 
+      </form>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
