--- a/python/flask/counter/templates/home.html
+++ b/python/flask/counter/templates/home.html
@@ -15,16 +15,14 @@
   </head>
   <body>
     <div class="content">
-      <form action="/">
+
         <h1>Counter</h1>
           <p> visited {{session['visits']}} times</p>
-        <a href="/add_one">
-          <button type="submit">Add two visits</button>
-        </a>
-        <a href="/destroy_session">
-          <button type="reset">Reset</button>
-        </a> 
-      </form>
+          <div class="col-3 flex justify-around">
+            <a href="/" class="btn btn-outline-primary">add one visit</a>
+            <a href="/reset" class="btn btn-outline-danger">reset</a>
+          </div>
+
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
