--- a/python/flask/counter/templates/home.html
+++ b/python/flask/counter/templates/home.html
@@ -18,10 +18,11 @@
 
         <h1>Counter</h1>
           <p> visited {{session['visits']}} times</p>
-          <div class="col-3 flex justify-around">
-            <a href="/" class="btn btn-outline-primary">add one visit</a>
-            <a href="/reset" class="btn btn-outline-danger">reset</a>
-          </div>
+            <div class="d-flex flex-row justify-content-around">
+              <a href="/" class="btn btn-outline-primary">add one visit</a>
+              <a href="/reset" class="btn btn-outline-danger">reset</a>
+            </div>
+
 
     </div>
     <!-- Optional JavaScript -->
