update static folder

--- a/python/flask/dojo_survey/templates/home.html
+++ b/python/flask/dojo_survey/templates/home.html
@@ -11,7 +11,33 @@
 <body>
     <h1>this is the home page</h1>
     <form action="/" method="post" class="shadow-sm p-3 mb-5 bg-body rounded">
-
+      <form>
+        <div class="mb-3">
+          <label class="form-label">First Name:</label>
+          <input type="text" class="form-control" >
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Last Name:</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Dojo Location:</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Favorite Language</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="mb-3">
+          <label  class="form-label">Comment (optional):</label>
+          <textarea class="form-control"  rows="3"></textarea>
+        </div>
+        <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </form>
 
 </body>
