--- a/python/flask/dojo_survey/static/css/my_style.css
+++ b/python/flask/dojo_survey/static/css/my_style.css
@@ -4,6 +4,9 @@
 }
 
 .content {
-    max-width: 500px;
-    margin: auto;
+    /* max-width: 500px;
+    margin: auto; */
+    margin: 0 auto;
+    /*there's something up with left and right padding?*/
+    padding: 34px 90px 34px;
 }
