--- a/python/flask/dojo_survey/templates/show_results.html
+++ b/python/flask/dojo_survey/templates/show_results.html
@@ -3,12 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Site</title>
+  <title>dojo survey results</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 </head>
 <body>
-<h1>Hello-Bootstrap</h1>
+  <div class="container">
+    <h1 class="text-decoration-underline">Submit Info</h1>
+    <p>First Name:        {{session['first_name']}}</p>
+    <p>Last Name:         {{session['last_name']}}</p>
+    <p>Dojo Location:     {{session['dojo_location']}}</p>
+    <p>favorite Language: {{session['fav_language']}}</p>
+    <p>comment:           {{session['comments']}}</p>
+    <button class="btn btn-primary">go back</button>
+  </div>
 </body>
 </html>
