--- a/python/mysql_flask/users_redo/templates/show_users.html
+++ b/python/mysql_flask/users_redo/templates/show_users.html
@@ -1,2 +1,38 @@
 <!-- this will be our dashboard to view all users -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User dashboard</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+  <style>
+    
+  </style>
+</head>
+<body>
+<h1></h1>
+<table class="table table-striped shadow p-3 mb-5 bg-body rounded">
+  <thead>
+    <tr>
+      <th scope="col">First Name</th>
+      <th scope="col">Last name</th>
+      <th scope="col">Email</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for one_user in all_users: %}
+    <tr>
+      <td>{{one_user.first_name}}</td>
+      <td>{{one_user.last_name}}</td>
+      <td>{{one_user.email}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+  <a href="/users/new">add a new user</a>
+</body>
+</html>
